--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,15 +1,8 @@
 server {
     listen 80;
-
-    location /api/ {
-        proxy_pass http://host.docker.internal:8000;
-    }
-    location /admin/ {
-        proxy_pass http://host.docker.internal:8000/admin/;
-    }
     location /api/docs/ {
         root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html $uri/swagger.html;
+        try_files $uri $uri/redoc.html;
     }
     location / {
         root /usr/share/nginx/html;
@@ -24,6 +17,5 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
-
 
 }
