--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,3 @@
-asgiref==3.6.0
-attrs==23.1.0
-certifi==2022.12.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-colorama==0.4.6
-cryptography==40.0.2
-defusedxml==0.7.1
 Django==3.2.19
 django-filter-23.2
 djangorestframework-3.14.0
@@ -17,7 +9,7 @@ djoser-2.2.0
 idna==3.4
 importlib-metadata==6.6.0
 pillow-9.5.0
-psycopg2-2.9.6
+psycopg2-binary-2.9.6
 pycparser==2.21
 python-dotenv==0.21.1
 pytz==2023.3
