--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -28,7 +28,6 @@ jobs:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
-    #  if: github.ref == 'refs/heads/master'
 
     steps:
       - name: Check out the repo
@@ -76,7 +75,7 @@ jobs:
             sudo docker compose rm frontend
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_backend:latest
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
-            
+            rm .env
             touch .env
             echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> .env
             echo DOCKER_USERNAME=${{ secrets.DOCKER_USERNAME }} >> .env
